# kpxhs

./: .hlint.yaml  .stylish-haskell.yaml  Makefile  README.md  RELEASE.md  Theming.md  kpxhs.cabal  stack.yaml
.github/: FUNDING.yml
.github/workflows/: master.yml  release.yml
docs/: Makefile  README.md  RELEASE.md  default_theme.hs  example_config.hs  kpxhs.1  kpxhs.1.md
docs/src/: part-1.md  part-2.md  section.py
src/kpxhs/: Common.hs  Config.hs  Constants.hs  Defaults.hs  Events.hs  Main.hs  Types.hs  UI.hs
src/kpxhs/Config/: Common.hs  Config.hs  Defaults.hs  Eval.hs  Types.hs
src/kpxhs/UI/: BrowserUI.hs  Common.hs  DialogUI.hs  EntryDetailsUI.hs  EntryUI.hs  ExitDialogUI.hs  ExitUI.hs  LoginUI.hs
src/kpxhs/ViewEvents/: BrowserEvents.hs  Common.hs  Copy.hs  EntryDetailsEvents.hs  EntryEvents.hs  ExitDialogEvents.hs  ExitEvents.hs  LoginEvents.hs  LoginFrozenEvents.hs  PasswordEvents.hs  SearchEvents.hs  Utils.hs
src/kpxhs/ViewEvents/BrowserEvents/: BrowserEvents.hs  Core.hs  Event.hs  Fork.hs  Utils.hs  VimCommand.hs
test/: README.md  default_theme.hs  example_config  example_config.hs  kpxhs_test.kdbx  kpxhs_test_no_keyfile.kdbx
