name:                kpxhs
version:             1.6
synopsis:            Interactive Keepass database TUI viewer
description:         Supports copying username and password; based on keepassxc-cli
homepage:            https://github.com/twenty5151/kpxhs
license:             GPL-3
license-file:        LICENSE
author:              twenty5151
maintainer:          tsuiyikching@protonmail.com
copyright:           2021 twenty5151
category:            Password
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kpxhs
  hs-source-dirs:    src/kpxhs
  main-is:           Main.hs
  other-modules:     Types,
                     Common,
                     Config.Config,
                     Config.Defaults,
                     Config.Types,
                     Defaults,
                     UI,
                     UI.Common,
                     UI.BrowserUI,
                     UI.ExitDialogUI,
                     UI.LoginUI,
                     UI.EntryDetailsUI,
                     Events,
                     ViewEvents.BrowserEvents.BrowserEvents,
                     ViewEvents.BrowserEvents.Utils,
                     ViewEvents.BrowserEvents.Fork,
                     ViewEvents.BrowserEvents.Event,
                     ViewEvents.Common,
                     ViewEvents.SearchEvents,
                     ViewEvents.EntryDetailsEvents,
                     ViewEvents.LoginEvents,
                     ViewEvents.ExitDialogEvents,
                     ViewEvents.Copy,
                     ViewEvents.Utils

  default-language:  Haskell2010
  ghc-options:       -threaded
                     -Weverything
                     -Wno-missing-exported-signatures
                     -Wno-missing-import-lists
                     -Wno-missed-specialisations
                     -Wno-all-missed-specialisations
                     -Wno-unsafe
                     -Wno-safe
                     -Wno-missing-safe-haskell-mode
                     -Wno-missing-local-signatures
                     -Wno-monomorphism-restriction
                     -Wno-implicit-prelude
                     -Wno-prepositive-qualified-module
                     -Wno-missing-deriving-strategies
  build-depends:     base >= 4.7 && < 5,
                     brick >= 0.6 && <= 0.61,
                     vty == 5.*,
                     microlens == 0.4.*,
                     microlens-th == 0.4.*,
                     vector == 0.12.*,
                     text == 1.2.*,
                     process == 1.6.*,
                     text-zipper == 0.11.*,
                     directory == 1.3.*,
                     containers == 0.6.*,
                     bytestring == 0.11.*
