name:                kpxhs
version:             1.11
synopsis:            Interactive Keepass database TUI viewer
description:         Supports copying username and password; based on keepassxc-cli
homepage:            https://github.com/akazukin5151/kpxhs
license:             GPL-3
license-file:        LICENSE
author:              akazukin5151
maintainer:          tsuiyikching@protonmail.com
copyright:           2021 akazukin5151
category:            Password
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable kpxhs
  hs-source-dirs:    src/kpxhs
  main-is:           Main.hs
  other-modules:     Types,
                     Common,
                     Config.Config,
                     Config.Eval,
                     Config.Defaults,
                     Config.Types,
                     Constants,
                     UI,
                     UI.Common,
                     UI.BrowserUI,
                     UI.ExitDialogUI,
                     UI.LoginUI,
                     UI.EntryDetailsUI,
                     Events,
                     ViewEvents.BrowserEvents.BrowserEvents,
                     ViewEvents.BrowserEvents.Core,
                     ViewEvents.BrowserEvents.Utils,
                     ViewEvents.BrowserEvents.Fork,
                     ViewEvents.BrowserEvents.Event,
                     ViewEvents.BrowserEvents.VimCommand,
                     ViewEvents.Common,
                     ViewEvents.SearchEvents,
                     ViewEvents.EntryDetailsEvents,
                     ViewEvents.LoginEvents,
                     ViewEvents.LoginFrozenEvents,
                     ViewEvents.ExitDialogEvents,
                     ViewEvents.Copy,
                     ViewEvents.Utils

  default-language:  Haskell2010
  ghc-options:       -threaded
                     -Weverything
                     -Wno-missing-exported-signatures
                     -Wno-missing-import-lists
                     -Wno-missed-specialisations
                     -Wno-all-missed-specialisations
                     -Wno-unsafe
                     -Wno-safe
                     -Wno-missing-safe-haskell-mode
                     -Wno-missing-local-signatures
                     -Wno-monomorphism-restriction
                     -Wno-implicit-prelude
                     -Wno-prepositive-qualified-module
                     -Wno-missing-deriving-strategies
  build-depends:     base >= 4.7 && < 5,
                     brick >= 0.62 && < 0.68,
                     vty >= 5.33 && < 5.40,
                     microlens-th >= 0.4.3.10 && < 0.5,
                     microlens >= 0.4.12.0 && < 0.5,
                     vector >= 0.12 && < 0.13 ,
                     text >= 1.2.4.1 && < 1.3,
                     process >= 1.6.13.2 && < 1.7,
                     text-zipper >= 0.11 && < 0.20,
                     directory >= 1.3.6.0 && < 1.4,
                     containers >= 0.6 && < 0.7,
                     bytestring >= 0.10.12.0 && < 0.11,
                     filepath >= 1.4.2.1 && < 1.5,
                     file-embed >= 0.0.15 && < 0.1.0
